objects/zkfedex__ShipmateGeneralSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores ZenKraft Shipmate app custom settings for general settings. There should only be one record max per org. If utilized, the record must be created manually and the fields must be set manually.</description>
    <fields>
        <fullName>zkfedex__HideYourFedExAccountNumberInWizard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will prevent your FedEx Account Number entered in the Shipmate Preference from being displayed in the shipping wizard.</description>
        <inlineHelpText>Will prevent your FedEx Account Number entered in the Shipmate Preference from being displayed in the shipping wizard.</inlineHelpText>
        <label>Hide Your FedEx Account Number in Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__IgnoreMaxJobLimitForScheduledTrack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ignore the Salesforce max number of scheduled jobs when attempting to schedule shipment tracking using &quot;Schedule Tracking&quot;. Note, the scheduling of the &quot;Schedule Tracking&quot; feature may fail if your org/edition is not setup to allow jobs past the max limit.</description>
        <inlineHelpText>Ignore the Salesforce max number of scheduled jobs when attempting to schedule shipment tracking using &quot;Schedule Tracking&quot;. Note, the scheduling of the &quot;Schedule Tracking&quot; feature may fail if your org/edition is not setup to allow jobs past the max limit.</inlineHelpText>
        <label>Ignore Max Job Limit for Scheduled Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__RunDemoMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Configures ZenKraft Shipmate to communicate to the FedEx test servers. A valid FedEx Account number that is compatible with the FedEx test servers must be used.</description>
        <inlineHelpText>Configures ZenKraft Shipmate to communicate to the FedEx test servers. A valid FedEx Account number that is compatible with the FedEx test servers must be used.</inlineHelpText>
        <label>Run Demo Mode</label>
        <type>Checkbox</type>
    </fields>
    <label>Shipmate General Settings</label>
</CustomObject>